kubernetes/core/vpn/vpn-gateway/operator/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: vpn-apps-network-policy
  namespace: vpn-apps
spec:
  podSelector: {}
  ingress:
  - from:
    # Only allow ingress from K8S
    - ipBlock:
        cidr: "${CLUSTER_PODS_NETWORK_IP_POOL}"
  egress:
  - to:
    # Only allow egress to K8S
    - ipBlock:
        cidr: "${CLUSTER_PODS_NETWORK_IP_POOL}"
  policyTypes:
    # - Ingress
    - Egress
